# vocab-flashcards

./: .gitignore  DDD_ARCHITECTURE.md  LOGGING_GUIDE.md  README.md  REFACTORING_NOTES.md  RUST_DDD_FIXES.md  SHADCN_PATH_UPDATES.md  components.json  package.json  vite.config.js
src-tauri/: Cargo.toml  build.rs  diesel.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/migrations/2025-07-05-082826_create_word_cards/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs  schema.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/commands/: mod.rs
src-tauri/src/application/dto/: mod.rs
src-tauri/src/application/queries/: mod.rs
src-tauri/src/commands/: word_cards.rs
src-tauri/src/db/: mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/aggregates/: mod.rs
src-tauri/src/domain/entities/: word_cards.rs
src-tauri/src/domain/repositories/: mod.rs
src-tauri/src/domain/services/: mod.rs
src-tauri/src/domain/value_objects/: mod.rs
src-tauri/src/infrastructure/: logger.rs  logging.rs  mod.rs
src-tauri/src/infrastructure/persistence/: mod.rs
src-tauri/src/infrastructure/repositories/: mod.rs
src-tauri/src/models/: word_cards.rs
src-tauri/src/presentation/commands/: mod.rs  word_cards.rs
src/lib/: index.ts
src/lib/application/: index.ts
src/lib/domain/: dictionary.ts
src/lib/infrastructure/: dictionaryApi.ts  dictionaryService.ts  index.ts
src/lib/usecases/: searchDictionary.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/cards/: +page.svelte
static/: test.txt  test2.txt
(+60 files in other folders)
